2008-09-23 Dmitry Frolov <frolov@riss-telecom.ru>

	* libfreeipmi/src/debug/ipmi-debug.c (ipmi_obj_dump): Fix printf
	portability.
	
2008-09-23 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_check_try_new_port): Fix corner case.
	
2008-09-22 Albert Chu <chu11@llnl.gov>

	* common/src/config-commit.c
	(config_commit_section): Fix return code corner case.
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_8.

2008-09-19 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sdr_cache.c
	(_ipmi_monitoring_sdr_cache_filename): Fix filename corner case.
	
2008-09-19 Albert Chu <chu11@llnl.gov>

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensors_config.c
	(_cb_sensor_state_parse): Fix corner case.

2008-09-13 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/, ipmimonitoring/: Handle sensor completion code of
        IPMI_COMP_CODE_PARAMETER_OUT_OF_RANGE and
        IPMI_COMP_CODE_REQUEST_INVALID_DATA_FIELD as special case.

2008-09-11  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_7.

2008-09-10 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, ipmimonitoring/: Handle sensor completion code of
	IPMI_COMP_CODE_COMMAND_ILLEGAL_FOR_SENSOR_OR_RECORD_TYPE as a
	special case.
	
2008-08-26  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_6.

2008-08-26  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, ipmimonitoring/: Do not read non-BMC owned sensors.
	
2008-08-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-chassis-cmds.c
	(fill_cmd_set_system_boot_options_boot_flags),
	libfreeipmi/src/api/ipmi-chassis-cmds-api.c
	(ipmi_cmd_set_system_boot_options_boot_flags): Fix input parameter
	check.
	
2008-08-02  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_5.

2008-08-01 Albert Chu <chu11@llnl.gov>
