@@ -1,3 +1,8 @@
+2008-09-24 Albert Chu <chu11@llnl.gov>
+
+	* ipmiconsole/src/libipmiconsole/: Fix incorrect port usage on
+	non-default port conditions.
+	
 2008-09-23 Dmitry Frolov <frolov@riss-telecom.ru>
 
 	* libfreeipmi/src/debug/ipmi-debug.c (ipmi_obj_dump): Fix printf
